<resources>
    <string name="app_name" translatable="false">Taleia</string>
    <string name="Qui">Who?</string>
    <string name="Que">What?</string>
    <string name="On">Where?</string>
    <string name="Escena">Scene</string>
    <string name="Login">Log</string>


    <string name="Personatge">Create a character</string>
    <string name="Ocupacio">Who</string>
    <string name="Caracteristica">Adjectives</string>
    <string name="Mania">Ticks</string>


    <string name="Frase">Challenge</string>
    <string name="Paraula">Word</string>
    <string name="Estil">Style</string>
    <string name="Restriccio">Limitation</string>


    <string name="Info">Info</string>
    <string name="Settings">Settings</string>
    <string name="Idiomes">Choose a language:</string>
    <string name="en">English</string>
    <string name="es">Spanish</string>
    <string name="cat">Catalan</string>
    <string name="fr">French</string>
    <string name="mode">Night mode</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_username">User</string>

    <string name="menu_settings">Settings</string>
    <string name="saved_prompts">Saved</string>
    <string name="log_out">Log out</string>
    <string name="log_in">Log in/Sign in</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>

    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="taleia_info">"Let's stop de creative's block! \n
        This app generates random scenes, characters and challenges to keep the juices flowing. \n
        You can save any prompt you fancy with the save button, thanks to the appwrite backend."</string>
</resources>
