<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorPrimary"
        android:padding="32dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/Idiomes"
            style="@style/TextSettings"/>
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal">
            <RadioButton
                android:id="@+id/radio_en"
                android:text="@string/en"
                style="@style/TextIdiomes"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton
                android:id="@+id/radio_cat"
                android:text="@string/cat"
                style="@style/TextIdiomes"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton
                android:id="@+id/radio_es"
                android:text="@string/es"
                style="@style/TextIdiomes"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton
                android:id="@+id/radio_fr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fr"
                style="@style/TextIdiomes"
                android:onClick="onRadioButtonClicked"/>
        </RadioGroup>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:text="@string/mode"
                style="@style/TextSettings"/>
            <Switch
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>