<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PersonatgeActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:orientation="vertical"
        android:background="@color/colorPrimary">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5"/>
            <TextView
                android:text="@string/Ocupacio"
                style="@style/TextCategoriaStyle"/>

            <Button
                android:id="@+id/ocupacio_boto"
                style="@style/TextBotoStyle"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.75"/>
            <TextView
                android:text="@string/Caracteristica"
                style="@style/TextCategoriaStyle" />

            <Button
                android:id="@+id/adjectius_boto"
                style="@style/TextBotoStyle" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.75"/>

            <TextView
                android:text="@string/Mania"
                style="@style/TextCategoriaStyle" />

            <Button
                android:id="@+id/accions_boto"
                style="@style/TextBotoStyle"  />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.25"/>

            <Button
                android:id="@+id/manies_boto"
                style="@style/TextBotoStyle"  />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5"/>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>